tests/snapshots/snapshot_tests__complex_schema_rendering.snap
---
source: tests/snapshot_tests.rs
expression: rendered_with_fks
---
                                                                                                                                                      
 ┌──────────┐   ┌──────────┐   ┌──────────┐   ┌──────────┐   ┌──────────┐                                                                             
 │users     │   │categories│   │products  │   │orders    │   │order_item│                                                                             
 ├──────────┤   ├──────────┤   ├──────────┤   ├──────────┤   ├──────────┤                                                                             
 │id        ┤   │id        ┤   │id        ┤   │id        ┤   │id        │                                                                             
 │email     │   │name      │   │name      │   │user_id ←─├   │order_id←─├                                                                             
 │name      │   │parent_id │   │category←─├   │status    │   │product_←─├                                                                             
 │created_at│   └──────────┘   │price     │   │total_amou│t  │quantity  │                                                                             
 └──────────┘                  │stock_quan│ity│created_at│   │price     │                                                                             
                               │created_by│   └──────────┘   └──────────┘                                                                             
                               └──────────┘
