tests/snapshots/snapshot_tests__foreign_key_rendering.snap
---
source: tests/snapshot_tests.rs
expression: rendered_with_fks
---
                                                                                                    
 ┌──────────┐   ┌──────────┐   ┌──────────┐                                                         
 │users     │   │posts     │   │comments  │                                                         
 ├──────────┤   ├──────────┤   ├──────────┤                                                         
 │id        ├←┬┐│id        ├←─┐│id        │                                                         
 │email     │ │││title     │  ││content   │                                                         
 │name      │ │└┤user_id   │  └┤post_id   │                                                      
 └──────────┘ │ └──────────┘  ┌┤user_id   │                                                     
              └───────────────┘└──────────┘                                                         
