tests/snapshots/snapshot_tests__multiple_tables_rendering.snap
---
source: tests/snapshot_tests.rs
expression: rendered_string
---
                                                                                                    
 ┌──────────┐   ┌──────────┐                                                                        
 │users     │   │posts     │                                                                        
 ├──────────┤   ├──────────┤                                                                        
 │id        │   │id        │                                                                        
 │email     │   │title     │                                                                        
 │name      │   │content   │                                                                        
 │created_at│   │user_id   │                                                                        
 └──────────┘   └──────────┘
