tests/snapshots/snapshot_tests__self_referencing_table.snap
---
source: tests/snapshot_tests.rs
expression: rendered_with_fks
---
                                                                                                    
 ┌──────────┐                                                                                       
 │categories│                                                                                       
 ├──────────┤                                                                                       
 │id        │                                                                                       
 │name      │                                                                                       
 │parent_id │                                                                                       
 └──────────┘
