tests/snapshots/snapshot_tests__simple_table_rendering.snap
---
source: tests/snapshot_tests.rs
expression: rendered_string
---
                                                                                                    
 ┌──────────┐                                                                                       
 │users     │                                                                                       
 ├──────────┤                                                                                       
 │id        │                                                                                       
 │email     │                                                                                       
 │name      │                                                                                       
 └──────────┘
