tests/snapshots/snapshot_tests__table_with_many_columns.snap
---
source: tests/snapshot_tests.rs
expression: rendered_string
---
                                                                                                    
 ┌──────────┐                                                                                       
 │detailed_u│ers                                                                                    
 ├──────────┤                                                                                       
 │id        │                                                                                       
 │username  │                                                                                       
 │email     │                                                                                       
 │first_name│                                                                                       
 │last_name │                                                                                       
 │phone     │                                                                                       
 │address   │                                                                                       
 │city      │                                                                                       
 │country   │                                                                                       
 │postal_cod│                                                                                       
 │date_of_bi│th                                                                                     
 │created_at│                                                                                       
 │updated_at│                                                                                       
 │is_active │                                                                                       
 │last_login│                                                                                       
 └──────────┘
